@@ -2,12 +2,13 @@
 Demonstration of jScdLib.
 
 # Build
-mvn clean install
+Building with Maven >= 3.8.4 is recommended. Java 17 is required in order for the build to finish successful.  
+  
+`mvn clean install`
 
 # Run
-This demo requires Java 16.  
+This demo requires Java 17.  
 
 ```
-java --add-modules jdk.incubator.foreign -Dforeign.restricted=permit -jar target/jscdlib.demo-1.0.0-SNAPSHOT-shaded.jar
+java --add-modules jdk.incubator.foreign --enable-native-access=ALL-UNNAMED -jar target/jscdlib.demo-1.1.0-shaded.jar
 ```
-
